add server kafka

--- a/report-service/application-dev.yml
+++ b/report-service/application-dev.yml
@@ -19,6 +19,8 @@ logging:
     org:
       hibernate:
         type: trace
-
+kafka:
+  bootstrap:
+    server: localhost:9092
 server:
   port: 8082
